--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,7 @@
    color: white;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+a {
+   text-decoration: none;
+}
